k8s/news-analysis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-analysis-deployment
  labels:
    app: news-analysis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news-analysis
  template:
    metadata:
      labels:
        app: news-analysis
    spec:
      containers:
        - name: news-analysis
          image: joshdavidang/news-analysis:v1
          ports:
            - containerPort: 8000
