k8s/news-analysis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-analysis-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/v1/news-analysis
            pathType: Prefix
            backend:
              service:
                name: news-analysis
                port:
                  number: 8080
